fix broken links

--- a/html/assignments/archives_of_empire.html
+++ b/html/assignments/archives_of_empire.html
@@ -119,13 +119,13 @@
 
 					<p>Looking forward, I&rsquo;ll further foreground student-owned knowledge by co-creating the assignment criteria as a community, thereby deepening students&rsquo; stakes and reflection in the learning process while encouraging them to absorb the criteria and feel confident in their ability to achieve success. Many of my students are teachers-in-training, and together we will reflect upon the sustained efforts required from both teacher and students to move beyond canonical texts and confront the archives critically.</p>
 
-					<p>To foster this collective work, I&rsquo;ll dedicate more class time to discussing the goals and difficulties of archival studies, as outlined in <em>One More Voice</em>&rsquo;s <a aria-label="External Link" href="https://onemorevoice.org/mission_statement.html">mission statement</a> and critical essays. I&rsquo;ll additionally give students the opportunity to introduce their texts and developing ideas to their colleagues prior to writing drafts. Also, to avoid the cultural &ldquo;overemphasis on minoritized writings as political or anthropological documents rather than artistic creations,&rdquo; which can limit students&rsquo; critical analyses of a text, I&rsquo;ll more insistently center the <em>aesthetic</em> value of recovered primary sources (Chuh 16). After students have submitted their essays, I&rsquo;ll ask them to facilitate short class discussions in small groups with each group leading conversations in relation to the throughlines that emerged in their essays. I aim to help students discover the know-how and confidence to establish their own scholarly voices and critical archival methodologies, while we travel together toward a more radical understanding of nineteenth-century literature and history.</p>
+					<p>To foster this collective work, I&rsquo;ll dedicate more class time to discussing the goals and difficulties of archival studies, as outlined in <em>One More Voice</em>&rsquo;s <a aria-label="External Link" href="https://onemorevoice.org/html/documents/mission_statement.html">mission statement</a> and critical essays. I&rsquo;ll additionally give students the opportunity to introduce their texts and developing ideas to their colleagues prior to writing drafts. Also, to avoid the cultural &ldquo;overemphasis on minoritized writings as political or anthropological documents rather than artistic creations,&rdquo; which can limit students&rsquo; critical analyses of a text, I&rsquo;ll more insistently center the <em>aesthetic</em> value of recovered primary sources (Chuh 16). After students have submitted their essays, I&rsquo;ll ask them to facilitate short class discussions in small groups with each group leading conversations in relation to the throughlines that emerged in their essays. I aim to help students discover the know-how and confidence to establish their own scholarly voices and critical archival methodologies, while we travel together toward a more radical understanding of nineteenth-century literature and history.</p>
 				</section>
 
 				<section aria-labelledby="works-cited">
 					<h3 id="works-cited">Works Cited</h3>
 
-						<p>Aga, Selim. &ldquo;<a aria-label="External Link" href="https://onemorevoice.org/html/transcriptions/liv_020050_TEI.html.">Incidents Connected with the Life of Selim Aga, A Native of Central Africa</a>.&rdquo; <em>One More Voice</em>, edited by Apex Data Services Inc. et al., New dawn edition, 2021.</p>
+						<p>Aga, Selim. &ldquo;<a aria-label="External Link" href="https://onemorevoice.org/html/transcriptions/liv_020050_TEI.html">Incidents Connected with the Life of Selim Aga, A Native of Central Africa</a>.&rdquo; <em>One More Voice</em>, edited by Apex Data Services Inc. et al., New dawn edition, 2021.</p>
 
 						<p>Anonymous, et al. &ldquo;<a aria-label="External Link" href="https://onemorevoice.org/html/transcriptions/liv_020043_TEI.html" >Nosutu, the Mother of Soga (Excerpt)</a>.&rdquo; 1874. <em>One More Voice</em>, edited by Jo Davis and Adrian S. Wisnicki, Site launch edition, 2020.</p>
 
@@ -158,7 +158,7 @@
 
 						<p>Seacole, Mary. <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em>. 1857. Edited by Sarah Salih, Penguin Books, 2005.</p>
 
-						<p>Wisnicki, Adrian S., et al. &ldquo;<a aria-label="External Link" href="https://onemorevoice.org/mission_statement.html">Mission Statement</a>.&rdquo; <em>One More Voice</em>, Solidarity edition, 2022.</p>
+						<p>Wisnicki, Adrian S., et al. &ldquo;<a aria-label="External Link" href="https://onemorevoice.org/html/documents/mission_statement.html">Mission Statement</a>.&rdquo; <em>One More Voice</em>, Solidarity edition, 2022.</p>
 				</section>
 
 				<section aria-labelledby="series">
@@ -176,7 +176,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Once Known Artist. <em><a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:The_Rani_of_Jhansi_leads_her_troops_in_the_siege_of_Jhansi.jpg.">The Rani of Jhansi Leads Her Troops in the Siege of Jhansi</a></em>. Gouache on paper, [nineteenth century], <em>Wikimedia Commons</em>. Public domain.</p>
+					<p>Once Known Artist. <em><a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:The_Rani_of_Jhansi_leads_her_troops_in_the_siege_of_Jhansi.jpg">The Rani of Jhansi Leads Her Troops in the Siege of Jhansi</a></em>. Gouache on paper, [nineteenth century], <em>Wikimedia Commons</em>. Public domain.</p>
 				</section>
 
 				<section class="small" aria-labelledby="citation">
