--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -164,7 +164,7 @@
 
 							<p>Hartman, Saidiya V. “Innocent Amusements: The Stage of Sufferance.” <em>Scenes of Subjection: Terror, Slavery, and Self-Making in Nineteenth-Century America</em>, Oxford University Press, 1997, pp. 17–48.</p>
 
-							<p><a aria-label="External Link" href="https://www.bl.uk/learning/histcitizen/campaignforabolition/sources/antislavery/aspoem/negroscomplaint.html">Illustrated Scenes</a>. <em>The Negro’s Complaint: A Poem</em>, by William Cowper, Harvey & Darton, 1826, p. 22. British Library Board, T.1271(1).</p>
+							<p><a aria-label="External Link" href="https://web.archive.org/web/20220815230628/https://www.bl.uk/learning/histcitizen/campaignforabolition/sources/antislavery/aspoem/negroscomplaint.html">Illustrated Scenes</a>. <em>The Negro’s Complaint: A Poem</em>, by William Cowper, Harvey & Darton, 1826, p. 22. British Library Board, T.1271(1).</p>
 
 							<p>Prince, Mary. <em><a aria-label="External Link" href="https://docsouth.unc.edu/neh/prince/prince.html">The History of Mary Prince, a West Indian Slave. Related by Herself. With a Supplement by the Editor. To Which Is Added, the Narrative of Asa-Asa, a Captured African</a></em>. 1831. <em>Documenting the American South</em>. 2000</p>
 
