--- a/html/lesson_plans/contemporary_postcolonial_texts.html
+++ b/html/lesson_plans/contemporary_postcolonial_texts.html
@@ -104,7 +104,7 @@
 
 					<p>In Section 2, I have provided a range of options in which these readings could be organized – through lesson plans, discussion questions, and multimodal assignments. Our goal is to discuss the British empire’s textual production of Africa as a racialized geography through a vast trove of print materials, illustrations, photographs, newspaper reports, etc. Section 3.1 looks across an array of materials that span the print markets of Britain, the U.S.A, South Africa, East Africa, India, and many other locations.</p>
 
-					<p>This archive introduces students to the ways in which impressions of Africa were crafted in print culture. Discussions of the popularity of David Livingstone’s travelogues and cult-like status of Henry Rider Haggard’s novels – and how they have changed since then – could be enriched by looking at <a aria-label="External Link" href="http://www.visualhaggard.org/">illustrations and reprint editions</a>, while newspapers and <a aria-label="External Link" href="https://archive.org/details/wideworldmagazin2022unse/page/n31/mode/2up">magazine entries</a> can show how Africa was presented to the public.</p>
+					<p>This archive introduces students to the ways in which impressions of Africa were crafted in print culture. Discussions of the popularity of David Livingstone’s travelogues and cult-like status of Henry Rider Haggard’s novels – and how they have changed since then – could be enriched by looking at <a aria-label="External Link" href="https://web.archive.org/web/20220218214353/http://www.visualhaggard.org/">illustrations and reprint editions</a>, while newspapers and <a aria-label="External Link" href="https://archive.org/details/wideworldmagazin2022unse/page/n31/mode/2up">magazine entries</a> can show how Africa was presented to the public.</p>
 
 					<p>While we initially begin by examining the construction of Africa as exploitable racialized geography, we later read elements in the module that can weave together the responses of Africans and South Asians as counterpoints to these colonial genres. Section 3.2 explores Indigenous African responses to both travel narrative genre and the African romance narrative.</p>
 
@@ -263,7 +263,7 @@
 						<h4 id="framework-1">Framing Conversations</h4>
 
 						<dl>
-							<dt id="banerjee">Banerjee, Sukanya. “<a aria-label="External Link" href="https://doi.org/10.1017/S1060150318001195.">Transimperial</a>.” <em>Victorian Literature and Culture</em>, vol. 46, no. 3-4, 2018, pp. 925-28.</dt>
+							<dt id="banerjee">Banerjee, Sukanya. “<a aria-label="External Link" href="https://doi.org/10.1017/S1060150318001195">Transimperial</a>.” <em>Victorian Literature and Culture</em>, vol. 46, no. 3-4, 2018, pp. 925-28.</dt>
 	
 							<dd aria-describedby="banerjee">
 								<p>This brief and versatile essay offers a productive frame for a module that examines the differences as much as the similarities between iterations of connected genres – travel/adventure/romance – across a range of colonial/Indian ocean landscapes. Particularly significant is the idea of “what has not been so readily mobile” across empire’s locales, which offers a useful launchpad for conversations on the remaking of colonial narrative paradigms.</p>
