--- a/html/lesson_plans/palestine_literature_anti-colonial_identity.html
+++ b/html/lesson_plans/palestine_literature_anti-colonial_identity.html
@@ -271,7 +271,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Frith, Francis. <em><a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/266375.">Sinai and Palestine</a></em>. 1860s, The Met. Public domain.</p>
+					<p>Frith, Francis. <em><a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/266375">Sinai and Palestine</a></em>. 1860s, The Met. Public domain.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
