--- a/html/lesson_plans/palestine_teaching_romanticism_victorianism.html
+++ b/html/lesson_plans/palestine_teaching_romanticism_victorianism.html
@@ -271,7 +271,7 @@
 
 					<p>Spivak, Gayatri Chakravorty. “<a aria-label="External Link" href="https://journals.library.mun.ca/ojs/index.php/JU/article/view/2309">How the Heritage of Postcolonial Studies Thinks Colonialism Today</a>.” <em>Janus Unbound: Journal of Critical Studies</em>, vol. 1, no. 1, Fall 2021, pp. 19–29.</p>
 
-					<p><a aria-label="External Link"  href="https://sakakini.org/about/?lang=en."><em>Who Is Khalil Sakakini</em></a><em>?</em> Khalil Sakakini Cultural Center. October, 2021</p>
+					<p><a aria-label="External Link"  href="https://sakakini.org/about/?lang=en"><em>Who Is Khalil Sakakini</em></a><em>?</em> Khalil Sakakini Cultural Center. October, 2021</p>
 				</section>
 
 				<section aria-labelledby="biography">
