--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -110,6 +110,7 @@
 						<li><strong>Emma Soberano</strong> (University of Michigan)</li>
 						<li><strong>Clare Stainthorp</strong> (Queen Mary University of London)</li>
 						<li><strong>Jessica R. Valdez</strong> (University of East Anglia)</li>
+						<li><strong>Daný van Dam</strong> (Leiden University)</li>
 						<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
 						<li><strong>Winter Jade Werner</strong> (Wheaton College)</li>
 						<li><strong>Adah Wisnicki</strong> (Prairie Hill Learning Center)</li>
