--- a/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html
+++ b/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html
@@ -82,7 +82,7 @@
 
 					<p>This unit thus offers our field and the public at-large a concrete pedagogical opening for Palestinian students and teachers to articulate their experiences and histories to a wider world and for non-Palestinian students and teachers to engage with and learn about Palestine in the classroom from those who are directly experiencing the consequences of a crisis that crystallized, in part, during the eighteenth and nineteenth centuries.</p>
 
-					<p><em>Pearl Chaozon Bauer, Ava Bindas, Kristen Layne Figgins, Jude Fogarty, Ryan D. Fong, Sophia Hsu, Cherrie Kwok, M.A. Miller, Adrian S. Wisnicki</em></p>
+					<p><em>Pearl Chaozon Bauer, Ava Bindas, Kristen Layne Figgins, Jude Fogarty, Ryan D. Fong, Sophia Hsu, Cherrie Kwok, M.A. Miller</em></p>
 				</section>
 
 				<aside class="breakout-quote" aria-labelledby="user-guide">
