--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -310,7 +310,7 @@
 				<section aria-labelledby="biography">
 					<h3 id="biography">Developer Biography</h3>
 					
-					<p><a aria-label="External Link" href="https://mk7kf.github.io/">Cherrie Kwok</a> is a Ph.D. candidate and an Elizabeth Arendall Tilney and Schuyler Tilney Jefferson Fellow at the University of Virginia. Her dissertation examines the relationship between Decadent aesthetics and anti-imperial politics through a set of writers from the Black Atlantic, China, and India from the long nineteenth century onwards. Her other interests include global Anglophone literature (especially in the Victorian period), poetry, postcolonial theory, and the digital humanities.</p>
+					<p>Cherrie Kwok, PhD specializes in Global Anglophone Literatures from the nineteenth century to today, with a focus on race, imperialism, and an artistic style and political concept called decadence.</p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
