--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 					<ul>
 						<li><strong>Ryan D. Fong</strong> (Kalamazoo College)</li>
 						<li><strong>Sophia Hsu</strong> (Lehman College, CUNY)</li>
-						<li><strong>Cherrie Kwok</strong></li>
+						<li><strong>Cherrie Kwok</strong> (independent Scholar)</li>
 						<li><strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</li>
 					</ul>
 				</section>
