--- a/html/lesson_plans/call_for_lesson_plan_decadence.html
+++ b/html/lesson_plans/call_for_lesson_plan_decadence.html
@@ -58,7 +58,7 @@
 
 					<p><em>Undisciplining the Victorian Classroom </em>(UVC) is a collaborative and peer-reviewed digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens. We are looking for contributors to an innovative lesson plan cluster about global decadence and aestheticism. Contributors are welcome to explore any aspect any aspect of decadence and aestheticism as they relate to race; enslavement; empire; anti-colonial, decolonial, and postcolonial resistance; or global circulation, translation, and reception (particularly in the global south). Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars and those with backgrounds that are under-represented in Victorian Studies and academia more broadly. For examples of lesson plan clusters that we have already published, <a aria-label="External Link" href="https://undiscipliningvc.org/html/lesson_plans.html">please click here</a>.</p>
 
-					<p>You can send your submission or apply for a role through <a aria-label="External Link" href="https://forms.gle/6VNP453P3rYtBJAU9">this form</a>. All questions should be sent to <a aria-label="External Client" href="mailto:mk7kf@virginia.edu">Cherrie Kwok</a>. The deadline is <strong>February 7, 2025</strong>.</p>
+					<p>You can send your submission or apply for a role through <a aria-label="External Link" href="https://forms.gle/6VNP453P3rYtBJAU9">this form</a>. All questions should be sent to <a aria-label="External Client" href="mailto:cherriemyk@gmail.com">Cherrie Kwok</a>. The deadline is <strong>February 7, 2025</strong>.</p>
 			
 				<hr class="hrcalls"/>
 
@@ -75,7 +75,7 @@
 
 					<p>Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars and those with backgrounds that are under-represented in Victorian Studies and academia more broadly. You can send your submission through <a aria-label="External Link" href="https://forms.gle/6VNP453P3rYtBJAU9">this form</a>. <strong>The deadline is February 7, 2025</strong>.</p>
 
-					<p>Submissions will be reviewed by the <em>UVC</em> Co-Directors. Please contact <a aria-label="External Client" href="mailto:mk7kf@virginia.edu?subject=Decadence%20LP%20Cluster">Cherrie Kwok</a> if you have any questions.</p>
+					<p>Submissions will be reviewed by the <em>UVC</em> Co-Directors. Please contact <a aria-label="External Client" href="mailto:cherriemyk@gmail.com?subject=Decadence%20LP%20Cluster">Cherrie Kwok</a> if you have any questions.</p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
