--- a/html/lesson_plans/contemporary_re-reading_archives.html
+++ b/html/lesson_plans/contemporary_re-reading_archives.html
@@ -47,7 +47,7 @@
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Cherrie Kwok <a class="mail" href="mailto:mk7kf@virginia.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Cherrie Kwok <a class="mail" href="mailto:cherriemyk@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Peer Reviewers:</strong> Diana Rose Newby, Jessie Reeder, Oishani Sengupta, and Emma Soberano</p>
 						
