--- a/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html
+++ b/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html
@@ -51,7 +51,7 @@
 
 						<p><strong>Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:ryan.fong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
-						<p><strong>Lesson Plan Guide:</strong> Cherrie Kwok <a class="mail" href="mailto:mk7kf@virginia.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>Lesson Plan Guide:</strong> Cherrie Kwok <a class="mail" href="mailto:cherriemyk@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p>
 
