--- a/html/assignments/rhetorics_empire.html
+++ b/html/assignments/rhetorics_empire.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Team-Based Learning in Multimodal Composition | Undisciplining the Victorian Classroom</title><!-- Change -->
+    <title>Rhetorics of Empire | Undisciplining the Victorian Classroom</title><!-- Change -->
 		<meta name="description" content="Brings together multimodal composition and Victorian studies in a team-based learning project for general education classes."/><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="assignment">
-				<h2 id="assignment">Team-Based Learning in Multimodal Composition</h2><!-- Change -->
+				<h2 id="assignment">Rhetorics of Empire</h2><!-- Change -->
 					<div class="aspect-ratio-box">
           	<img src="/img/assignments/uvc_0090-1800px.jpg" srcset="/img/assignments/uvc_0090-1800px.jpg 1800w, /img/assignments/uvc_0090-1650px.jpg 1650w, /img/assignments/uvc_0090-1500px.jpg 1500w, /img/assignments/uvc_0090-1350px.jpg 1350w, /img/assignments/uvc_0090-1200px.jpg 1200w, /img/assignments/uvc_0090-1050px.jpg 1050w, /img/assignments/uvc_0090-900px.jpg 900w, /img/assignments/uvc_0090-750px.jpg 750w, /img/assignments/uvc_0090-600px.jpg 600w, /img/assignments/uvc_0090-450px.jpg 450w, /img/assignments/uvc_0090-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Colorful Empire Marketing Board poster map highlighting British imperial trade routes and colonies."/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
@@ -201,7 +201,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assignment Citation (MLA)</h3>
-					<p>Gregory Brennen, dev. “Team-Based Learning in Multimodal Composition.” Jacqueline Barrios, peer rev.; Sophia Hsu, Jude Fogarty, assess. guide. <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/assignments/team-based_learning.html" class="cite-link">https://undiscipliningvc.org/html/assignments/team-based_learning.html</a>.</p><!-- Change -->
+					<p>Gregory Brennen, dev. “Rhetorics of Empire.” Jacqueline Barrios, peer rev.; Sophia Hsu, Jude Fogarty, assess. guide. <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/assignments/team-based_learning.html" class="cite-link">https://undiscipliningvc.org/html/assignments/team-based_learning.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
