--- a/html/assignments/victorian_histories.html
+++ b/html/assignments/victorian_histories.html
@@ -55,7 +55,7 @@
 
 						<p><strong>Webpage Developer:</strong> Adrian S. Wisnicki</p><!-- Change -->
 
-						<p><strong>Associated Assignment:</strong> Ashley Nadeau, “<a href="/html/assignments/audio_encounters.html">Audio Encounters with Victorian Poetry</a>”; Gregory Brennen, “<a href="/html/assignments/team-based_learning.html">Team-Based Learning in Multimodal Composition</a>”</p><!-- Change -->
+						<p><strong>Associated Assignment:</strong> Ashley Nadeau, “<a href="/html/assignments/audio_encounters.html">Audio Encounters with Victorian Poetry</a>”; Gregory Brennen, “<a href="/html/assignments/team-based_learning.html">Rhetorics of Empire</a>”</p><!-- Change -->
 
 						<p><strong>Cluster Title:</strong> Beyond the Essay</p><!-- Change -->
 
