--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -68,6 +68,7 @@
 						<li><strong>Carolyn Betensky</strong> (University of Rhode Island)</li>
 						<li><strong>Ava Bindas</strong> (University of California Davis)</li>
 						<li><strong>Kira Braham</strong> (Louisiana School for Math, Science, and the Arts)</li>
+						<li><strong>Gregory Brennen</strong> (Oklahoma State University)</li>
 						<li><strong>Michelle Prain Brice</strong> (Universidad Adolfo Ibañez; Pontificia Universidad Católica de Valparaíso)</li>
 						<li><strong>Lindsey N. Chappell</strong> (Georgia Southern University)</li>
 						<li><strong>Sanjana Chowdhury</strong> (Texas Christian University)</li>
@@ -94,6 +95,7 @@
 						<li><strong>Waiyee Loh</strong> (Kanagawa University)</li>
 						<li><strong>Tricia Lootens</strong> (University of Georgia)</li>
 						<li><strong>Shantanu Majee</strong> (Techno India University)</li>
+						<li><strong>Ashley Nadeau</strong> (Utah Valley University)</li>
 						<li><strong>Diana Rose Newby</strong> (Princeton University)</li>
 						<li><strong>Indu Ohri</strong> (University of Virginia)</li>
 						<li><strong>Hyungji Park</strong> (Yonsei University)</li>
@@ -107,6 +109,7 @@
 						<li><strong>Dana Aicha Shaaban</strong> (Texas Christian University)</li>
 						<li><strong>Breanna Simpson</strong> (York University)</li>
 						<li><strong>Emma Soberano</strong> (University of Michigan)</li>
+						<li><strong>Taylor Soja</strong> (Illinois State University)</li>
 						<li><strong>Clare Stainthorp</strong> (Queen Mary University of London)</li>
 						<li><strong>Jessica R. Valdez</strong> (University of East Anglia)</li>
 						<li><strong>Daný van Dam</strong> (Leiden University)</li>
