--- a/sitemap.html
+++ b/sitemap.html
@@ -172,6 +172,13 @@
 								<!-- <li><a href="/html/assignments/call_for_assignments.html">Call for Assignments (2023)</a></li> -->
 								<li>Students in the Archives
 									<ol>
+										<li><a href="/html/assignments/rhetorics_empire.html">Rhetorics of Empire</a></li>
+										<li><a href="/html/assignments/audio_encounters.html">Audio Encounters with Victorian Poetry</a></li>
+										<li><a href="/html/assignments/victorian_histories.html">Victorian Histories for Today</a></li>
+									</ol>
+								</li>
+								<li>Students in the Archives
+									<ol>
 										<li><a href="/html/assignments/archives_of_empire.html">Archives of Empire</a></li>
 										<li><a href="/html/assignments/exploring_archives.html">Exploring the Archives</a></li>
 									</ol>
