remove inactive calls

--- a/html/syllabi.html
+++ b/html/syllabi.html
@@ -45,10 +45,10 @@
 					<p>These peer-reviewed syllabi are organized around specific themes that seek to challenge and expand traditional ideas of Victorian Studies. Introducing each syllabus is a short essay that expounds upon the critical framing of the syllabus to make explicit how an undisciplined approach to teaching Victorian Studies informs course design, the selection of materials, assignment construction, and pedagogical practices.</p>
 				</section>
 
-				<section aria-labelledby="syllabi+syllabus-clusters">
+				<!-- <section aria-labelledby="syllabi+syllabus-clusters">
 					<h3 id="syllabi+syllabus-clusters">Call for Syllabi and Syllabus Clusters (Open)</h3>
 					<div><a href="/html/syllabi/call_for_syllabi_and_syllabus_clusters.html"><img loading="lazy" src="/img/syllabi/tiles/uvc_0039-1136px.jpg" srcset="/img/syllabi/tiles/uvc_0039-1136px.jpg 1136w, /img/syllabi/tiles/uvc_0039-930px.jpg 930w, /img/syllabi/tiles/uvc_0039-814px.jpg 814w, /img/syllabi/tiles/uvc_0039-662px.jpg 662w, /img/syllabi/tiles/uvc_0039-568px.jpg 568w, /img/syllabi/tiles/uvc_0039-530px.jpg 530w, /img/syllabi/tiles/uvc_0039-465px.jpg 465w, /img/syllabi/tiles/uvc_0039-407px.jpg 407w, /img/syllabi/tiles/uvc_0039-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of wool, dovetailed tapestry weave; twined edges; (remnants of) corner knotted tassel."/></a></div>
-				</section>
+				</section> -->
 
 				<section aria-labelledby="identity_and_belief">
 					<h3 id="religious_other_4">The Nineteenth-Century Religious Other</h3>
