--- a/sitemap.html
+++ b/sitemap.html
@@ -64,6 +64,8 @@
 
 						<li role="none"><a href="/html/lesson_plans.html"><span id="lesson_plans">Lesson Plans</span></a>
 							<ol>
+							<!-- <li><a href="/html/lesson_plans/call_for_lesson_plan_decadence.html">Call for Participants: Global Decadence and Aestheticism Lesson Plan Cluster (2024)</a></li> -->
+							<!-- <li><a href="/html/lesson_plans/call_for_lesson_plan_participants.html">Call for Participants: Lesson Plans on Female POC Folklorists (2023)</a></li> -->
 								<li><a href="html/lesson_plans/contemporary_undisciplining_introduction.html">Undisciplining In and Through Contemporary Texts</a>
 									<ol>
 										<li><a href="html/lesson_plans/contemporary_undisciplining_ecocolonialism.html">Undisciplining Ecocolonialism with Leslie Marmon Silko</a></li>
@@ -116,7 +118,7 @@
 
 						<li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
 							<ol>
-								<li><a href="/html/syllabi/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters (Open)</a></li>
+								<!-- <li><a href="/html/syllabi/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters (Open)</a></li> -->
 								<li>Religion, Secularism, Empire
 									<ol>
 										<li><a href="/html/syllabi/constructing_religion.html">Constructing Religion and Empire in Nineteenth-Century Literature</a></li>
