--- a/sitemap.html
+++ b/sitemap.html
@@ -172,7 +172,7 @@
 						<li role="none"><a href="/html/assignments.html"><span id="assignments">Assignments</span></a>
 							<ol>
 								<!-- <li><a href="/html/assignments/call_for_assignments.html">Call for Assignments (2023)</a></li> -->
-								<li>Students in the Archives
+								<li>Beyond the Essay
 									<ol>
 										<li><a href="/html/assignments/rhetorics_empire.html">Rhetorics of Empire</a></li>
 										<li><a href="/html/assignments/audio_encounters.html">Audio Encounters with Victorian Poetry</a></li>
