--- a/html/assignments/victorian_histories.html
+++ b/html/assignments/victorian_histories.html
@@ -124,7 +124,7 @@
 
 					<!--<p><em>Insert image 1 here</em></p>-->
 
-					<p class="image-border"  style="padding:.5rem;"><strong>Image 1</strong>. Taylor Soja. “Creative Element Produced by a Student for Their Project Titled ‘Poor Creatures: Three Case Studies of Black Women in Nineteenth Century Europe.’” 2024.  Published by permission. View <a target="_blank" href="/img/assignments/uvc_0093-1800px.jpg">Image 1</a> (open in new tab; click on image to enlarge).</p>
+					<p class="image-border"  style="padding:.5rem;"><strong>Image 1</strong>. Taylor Soja. “Creative Element Produced by a Student for Their Project Titled ‘Scheele’s Green: The Color to Dye For.’” 2024.  Published by permission. View <a target="_blank" href="/img/assignments/uvc_0093-1800px.jpg">Image 1</a> (open in new tab; click on image to enlarge).</p>
 
 					<p>Another student reimagined the nineteenth-century phenomenon of the wax museum to recover the voices of three prominent African and African diasporic women – Mary Seacole, Sarah Forbes Bonetta, and Sarah Baartman – whose lives were shaped by European colonial networks of power, migration, and movement. This student pitched an online, interactive “wax museum” designed to restore the voices of these historical figures by using evidence drawn from primary and secondary sources.</p> 
 					
@@ -132,7 +132,7 @@
 
 					<!--<p><em>Insert image 2 here</em></p>-->
 
-					<p class="image-border" style="padding:.5rem;"><strong>Images 2-3</strong>. Taylor Soja. “Creative Element Produced by a Student for Their Project Titled ‘Scheele’s Green: The Color to Dye For.’” 2024. Published by permission. View <a target="_blank" href="/img/assignments/uvc_0094-1227px.jpg">Image 2</a> (opens in new tab; click on image to enlarge) and <a target="_blank" href="/img/assignments/uvc_0095-1227px.jpg">Image 3</a> (opens in new tab; click on image to enlarge).</p>
+					<p class="image-border" style="padding:.5rem;"><strong>Images 2-3</strong>. Taylor Soja. “Creative Element Produced by a Student for Their Project Titled ‘Poor Creatures: Three Case Studies of Black Women in Nineteenth Century Europe.’” 2024. Published by permission. View <a target="_blank" href="/img/assignments/uvc_0094-1227px.jpg">Image 2</a> (opens in new tab; click on image to enlarge) and <a target="_blank" href="/img/assignments/uvc_0095-1227px.jpg">Image 3</a> (opens in new tab; click on image to enlarge).</p>
 
 					<p>Although each student produced their own individual project, they collaborated with each other throughout the semester in a series of scaffolded assignments. Each week in class we discussed model public history projects, so students had examples to draw on as they thought about and researched possible topics and formats for their projects. Each student proposed a topic in week 8 of our 16-week semester and received detailed feedback from me and their peers.</p>
 
