--- a/html/assignments.html
+++ b/html/assignments.html
@@ -50,7 +50,7 @@
 					<div><a href="/html/assignments/call_for_assignments.html"><img loading="lazy" src="/img/assignments/tiles/uvc_0040-1136px.jpg" srcset="/img/assignments/tiles/uvc_0040-1136px.jpg 1136w, /img/assignments/tiles/uvc_0040-930px.jpg 930w, /img/assignments/tiles/uvc_0040-814px.jpg 814w, /img/assignments/tiles/uvc_0040-662px.jpg 662w, /img/assignments/tiles/uvc_0040-568px.jpg 568w, /img/assignments/tiles/uvc_0040-530px.jpg 530w, /img/assignments/tiles/uvc_0040-465px.jpg 465w, /img/assignments/tiles/uvc_0040-407px.jpg 407w, /img/assignments/tiles/uvc_0040-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/></a></div>
 				</section> -->
 
-				<!-- <section aria-labelledby="beyond-essay-3">
+				<section aria-labelledby="beyond-essay-3">
 					<h3 id="beyond-essay-3">Beyond the Essay</h3>
 					<div><a href="/html/assignments/rhetorics_empire.html"><img loading="lazy" src="/img/assignments/tiles/uvc_0090-1324px.jpg" srcset="/img/assignments/tiles/uvc_0090-1324px.jpg 1324w, /img/assignments/tiles/uvc_0090-1136px.jpg 1136w, /img/assignments/tiles/uvc_0090-930px.jpg 930w, /img/assignments/tiles/uvc_0090-814px.jpg 814w, /img/assignments/tiles/uvc_0090-662px.jpg 662w, /img/assignments/tiles/uvc_0090-568px.jpg 568w, /img/assignments/tiles/uvc_0090-530px.jpg 530w, /img/assignments/tiles/uvc_0090-465px.jpg 465w, /img/assignments/tiles/uvc_0090-407px.jpg 407w, /img/assignments/tiles/uvc_0090-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A colorful oil painting of the Rani of Jhansi leadings her troops on horseback."/><span>Rhetorics of Empire</span><p class="new">New</p></a></div>
 				</section>
@@ -63,7 +63,7 @@
 				<section aria-labelledby="beyond-essay-1">
 					<h3 id="beyond-essay-1">Beyond the Essay</h3>
 					<div><a href="/html/assignments/victorian_histories.html"><img loading="lazy" src="/img/assignments/tiles/uvc_0092-930px.jpg" srcset="/img/assignments/tiles/uvc_0092-930px.jpg 930w, /img/assignments/tiles/uvc_0092-814px.jpg 814w, /img/assignments/tiles/uvc_0092-662px.jpg 662w, /img/assignments/tiles/uvc_0092-568px.jpg 568w, /img/assignments/tiles/uvc_0092-530px.jpg 530w, /img/assignments/tiles/uvc_0092-465px.jpg 465w, /img/assignments/tiles/uvc_0092-407px.jpg 407w, /img/assignments/tiles/uvc_0092-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A colorful oil painting of the Rani of Jhansi leadings her troops on horseback."/><span>Victorian Histories for Today</span><p class="new">New</p></a></div>
-				</section> -->
+				</section>
 
 				<section aria-labelledby="students-in-the-archives-1">
 					<h3 id="students-in-the-archives-1">Students in the Archives</h3>
