--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -5,7 +5,7 @@
 		<title>Lesson Plans | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Introduces and organizes in clusters a series of lesson plans focused on teaching Victorian Studies through a positive, race-conscious lens."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="robots" content="index, follow"/>
+		<meta name="robots" content="noindex, nofollow"/>
 		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
