--- a/html/lesson_plans/palestine_arabian_penninsula.html
+++ b/html/lesson_plans/palestine_arabian_penninsula.html
@@ -5,7 +5,7 @@
     <title>The Romanticization of the Bedouin Arab and the Arabian Peninsula | Undisciplining the Victorian Classroom</title><!-- change title of pages to use underscores and to be consistent; reach out to authors and ask to shorten title in accordance with UVC style guide-->
 		<meta name="description" content="Discusses the link between British colonial representations of the Arabian Peninsula, Arabs, and Arabia in the Romantic and Victorian periods."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="robots" content="index, follow"/>
+		<meta name="robots" content="noindex, nofollow"/>
 		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
