--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <title>404 Error | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="404 page for Undisciplining the Victorian Classroom. Helps users find their way back into the pages of the site."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="robots" content="noindex, follow"/>
+		<meta name="robots" content="noindex, nofollow"/>
 		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
