--- a/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html
+++ b/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html
@@ -5,7 +5,7 @@
     <title>Palestine in the Eighteenth and Nineteenth Centuries</title>
 		<meta name="description" content="Explores British Romantic and Victorian-era fantasies of Palestine, and Palestinian teachers' views on British literature and Israel’s settler colonial project."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="robots" content="index, follow"/>
+		<meta name="robots" content="noindex, nofollow"/>
 		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
