--- a/html/lesson_plans/palestine_teaching_romanticism_victorianism.html
+++ b/html/lesson_plans/palestine_teaching_romanticism_victorianism.html
@@ -5,7 +5,7 @@
     <title>Teaching Romanticism and Victorianism in Palestine | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Explores the contemporary conditions in which teachers and students in Occupied Palestine engage with British Romantic and Victorian period texts."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="robots" content="index, follow"/>
+		<meta name="robots" content="noindex, nofollow"/>
 		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
