--- a/html/lesson_plans/palestine_travel.html
+++ b/html/lesson_plans/palestine_travel.html
@@ -7,7 +7,7 @@
 
 		<meta name="description" content="Discusses the ambivalent nature of encounters between British travelers and Palestinian communities and landscapes in the Nineteenth Century."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="robots" content="index, follow"/>
+		<meta name="robots" content="noindex, nofollow"/>
 		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
