--- a/sitemap.html
+++ b/sitemap.html
@@ -5,7 +5,7 @@
     <title>Site Map | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Provides a skeletal outline of all the pages of the Undisciplining the Victorian Classroom project site."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="robots" content="index, follow"/>
+		<meta name="robots" content="noindex, nofollow"/>
 		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
