--- a/html/lesson_plans/social_what_nationalism.html
+++ b/html/lesson_plans/social_what_nationalism.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>What is Nationalism | Undisciplining the Victorian Classroom</title><!-- Change -->
+    <title>What is Nationalism? | Undisciplining the Victorian Classroom</title><!-- Change -->
 		<meta name="description" content="Interrogates nationalism's complexities through critical discussions of its benefits, drawbacks, and alternatives, with a focus on Black nationalism and global perspectives."/><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-				<h2 id="lesson-plan">What is Nationalism</h2><!-- Change -->
+				<h2 id="lesson-plan">What is Nationalism?</h2><!-- Change -->
 					<div class="aspect-ratio-box">
           	<img src="/img/lesson_plans/uvc_0097-0098-1800px.jpg" srcset="/img/lesson_plans/uvc_0097-0098-1800px.jpg 1800w, /img/lesson_plans/uvc_0097-0098-1650px.jpg 1650w, /img/lesson_plans/uvc_0097-0098-1500px.jpg 1500w, /img/lesson_plans/uvc_0097-0098-1350px.jpg 1350w, /img/lesson_plans/uvc_0097-0098-1200px.jpg 1200w, /img/lesson_plans/uvc_0097-0098-1050px.jpg 1050w, /img/lesson_plans/uvc_0097-0098-900px.jpg 900w, /img/lesson_plans/uvc_0097-0098-750px.jpg 750w, /img/lesson_plans/uvc_0097-0098-600px.jpg 600w, /img/lesson_plans/uvc_0097-0098-450px.jpg 450w, /img/lesson_plans/uvc_0097-0098-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Painting of multi-armed Indian woman in orange garments with circular halo against faded background. Right: People on steps of Lincoln Memorial with banner: Revolutionary People's Constitutional Convention."/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
@@ -202,7 +202,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Darian Wilson, dev. “What is Nationalism.” Adrian S. Wisnicki, Cherrie Kwok, Nirshan Perera, peer revs.; Darian Wilson, les. plan clust. dev.;  Adrian S. Wisnicki, les. plan guide/copyed. <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/lesson_plans/social_what_nationalism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/social_what_nationalism.html</a>.</p><!-- Change -->
+					<p>Darian Wilson, dev. “What is Nationalism?.” Adrian S. Wisnicki, Cherrie Kwok, Nirshan Perera, peer revs.; Darian Wilson, les. plan clust. dev.;  Adrian S. Wisnicki, les. plan guide/copyed. <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/lesson_plans/social_what_nationalism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/social_what_nationalism.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
