--- a/html/lesson_plans/social_dystopian_utopian.html
+++ b/html/lesson_plans/social_dystopian_utopian.html
@@ -49,9 +49,9 @@
 					<div class="specs-container">
 						<p><strong>Developer/Lesson Plan Cluster Developer:</strong> Darian Wilson <a class="mail" href="mailto:darianaleynawilson@outlook.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 
-						<p><strong>Peer Reviewers:</strong> Adrian S. Wisnicki (internal), Cherrie Kwok (internal), Nirshan Perera (external)</p><!-- Change -->
+						<p><strong>Peer Reviewers:</strong> Cherrie Kwok (internal), Nirshan Perera (external)</p><!-- Change -->
 
-						<p><strong>Lesson Plan Guide/Copyeditor/Webpage Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com ?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
+						<p><strong>Lesson Plan Guide/Webpage Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com ?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 
 						<p><strong>Cluster Title:</strong> Social Justice Movements in the Victorian Era and Beyond</p><!-- Change -->
 
@@ -202,7 +202,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Darian Wilson, dev. “Dystopian and Utopian Literature.” Adrian S. Wisnicki, Cherrie Kwok, Nirshan Perera, peer revs.; Darian Wilson, les. plan clust. dev.;  Adrian S. Wisnicki, les. plan guide/copyed. <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/lesson_plans/social_dystopian_utopian.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/social_dystopian_utopian.html</a>.</p><!-- Change -->
+					<p>Darian Wilson, dev. “Dystopian and Utopian Literature.” Cherrie Kwok, Nirshan Perera, peer revs.; Darian Wilson, les. plan clust. dev.;  Adrian S. Wisnicki, les. plan guide. <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/lesson_plans/social_dystopian_utopian.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/social_dystopian_utopian.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
